--- a/weatherApp/docker-compose.yml
+++ b/weatherApp/docker-compose.yml
@@ -41,6 +41,15 @@ services:
           test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
           retries: 3
           timeout: 5s
+    phpmyadmin:
+        image: phpmyadmin
+        restart: always
+        ports:
+            - 8088:80
+        environment:
+            - PMA_ARBITRARY=1
+        networks:
+            - sail
 networks:
     sail:
         driver: bridge
